--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 <div id="uc">
-  <span>404: Profile is under construction</span>
+  <span>404: This site under construction</span>
   <br>
   <div id="loading">
 		<div id="wiggle"></div>
